Add dependency to bootstrapper creation script for org.eclipse.equinox.supplement